--- a/LionsAndTigers/Base.lproj/Main.storyboard
+++ b/LionsAndTigers/Base.lproj/Main.storyboard
@@ -16,26 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lVY-pp-asc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lioness.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="lVY-pp-asc">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="521"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                                 </variation>
                             </imageView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heU-9d-FMj">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="10M-id-rEy"/>
-                                    <barButtonItem title="Next" id="acb-LK-wyl">
-                                        <connections>
-                                            <action selector="nextBarButtonItemPressed:" destination="vXZ-lx-hvc" id="U07-w8-K3g"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="536" width="320" height="44"/>
-                                </variation>
-                            </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jnh-av-FvU">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -63,24 +49,38 @@
                                     <rect key="frame" x="35" y="468" width="213" height="21"/>
                                 </variation>
                             </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heU-9d-FMj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="10M-id-rEy"/>
+                                    <barButtonItem title="Next" id="acb-LK-wyl">
+                                        <connections>
+                                            <action selector="nextBarButtonItemPressed:" destination="vXZ-lx-hvc" id="U07-w8-K3g"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="528" width="320" height="44"/>
+                                </variation>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="lVY-pp-asc"/>
-                                <exclude reference="heU-9d-FMj"/>
                                 <exclude reference="Jnh-av-FvU"/>
                                 <exclude reference="a0C-Oe-haE"/>
                                 <exclude reference="pfo-QU-HYI"/>
+                                <exclude reference="heU-9d-FMj"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="lVY-pp-asc"/>
-                                <include reference="heU-9d-FMj"/>
                                 <include reference="Jnh-av-FvU"/>
                                 <include reference="a0C-Oe-haE"/>
                                 <include reference="pfo-QU-HYI"/>
+                                <include reference="heU-9d-FMj"/>
                             </mask>
                         </variation>
                     </view>
@@ -95,4 +95,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="Lioness.jpeg" width="275" height="183"/>
+    </resources>
 </document>
